--- a/src/sample/View/login.fxml
+++ b/src/sample/View/login.fxml
@@ -9,48 +9,64 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-         <children>
-            <JFXTextField labelFloat="true" promptText="username" />
-            <JFXPasswordField promptText="password">
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
-            </JFXPasswordField>
-            <VBox prefHeight="30.0" prefWidth="100.0">
-               <children>
-                  <Label contentDisplay="RIGHT" text="New User?">
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
-                     <font>
-                        <Font size="9.0" />
-                     </font>
-                  </Label>
-                  <Label text="Forgot password?">
-                     <VBox.margin>
+<StackPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.loginController">
+   <children>
+      <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" StackPane.alignment="CENTER">
+         <center>
+            <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <center>
+                  <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="BOTTOM_CENTER">
+                     <children>
+                        <JFXTextField fx:id="usernameInput" labelFloat="true" promptText="username" />
+                        <JFXPasswordField fx:id="passwordInput" labelFloat="true" promptText="password">
+                           <VBox.margin>
+                              <Insets top="20.0" />
+                           </VBox.margin>
+                        </JFXPasswordField>
+                        <BorderPane prefHeight="75.0" prefWidth="200.0">
+                           <right>
+                              <VBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="100.0" BorderPane.alignment="BOTTOM_RIGHT">
+                                 <children>
+                                    <Label fx:id="newUserButton" contentDisplay="RIGHT" text="New User?">
+                                       <VBox.margin>
+                                          <Insets top="5.0" />
+                                       </VBox.margin>
+                                       <font>
+                                          <Font size="9.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="forgotPasswordButton" text="Forgot password?">
+                                       <VBox.margin>
+                                          <Insets />
+                                       </VBox.margin>
+                                       <font>
+                                          <Font size="9.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                           </right>
+                           <bottom>
+                              <JFXButton fx:id="enterButton" defaultButton="true" text="Enter" BorderPane.alignment="CENTER" />
+                           </bottom>
+                        </BorderPane>
+                     </children>
+                     <BorderPane.margin>
+                        <Insets left="20.0" right="20.0" top="100.0" />
+                     </BorderPane.margin>
+                     <opaqueInsets>
                         <Insets />
-                     </VBox.margin>
-                     <font>
-                        <Font size="9.0" />
-                     </font>
-                  </Label>
-               </children>
-            </VBox>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" text="Enter">
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
-            </Button>
-         </children>
-         <padding>
-            <Insets left="200.0" right="200.0" top="50.0" />
-         </padding>
-         <BorderPane.margin>
-            <Insets top="100.0" />
-         </BorderPane.margin>
-      </VBox>
-   </center>
-</BorderPane>
+                     </opaqueInsets>
+                  </VBox>
+               </center>
+               <BorderPane.margin>
+                  <Insets />
+               </BorderPane.margin>
+            </BorderPane>
+         </center>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </BorderPane>
+   </children>
+</StackPane>
