--- a/src/sample/View/login.fxml
+++ b/src/sample/View/login.fxml
@@ -1,27 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.geometry.*?>
 <?import com.jfoenix.controls.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.loginController">
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0" StackPane.alignment="CENTER">
          <StackPane.margin>
             <Insets />
          </StackPane.margin>
          <center>
-            <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <StackPane prefHeight="400.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
-                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="40.0">
+                  <VBox alignment="CENTER" prefHeight="142.0" prefWidth="500.0" spacing="40.0">
                      <children>
-                        <JFXTextField alignment="CENTER" promptText="Username" />
-                        <JFXPasswordField alignment="CENTER" promptText="Password" />
+                        <JFXTextField fx:id="usernameInput" alignment="CENTER" promptText="Username">
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin></JFXTextField>
+                        <JFXPasswordField fx:id="passwordInput" alignment="CENTER" promptText="Password" />
                         <VBox alignment="TOP_RIGHT" prefHeight="150.0" prefWidth="100.0">
                            <children>
-                              <Label text="New user?" />
+                              <Label fx:id="signUpButton" text="New user?" />
                            </children>
                            <VBox.margin>
                               <Insets top="-35.0" />
@@ -29,7 +33,7 @@
                         </VBox>
                      </children>
                      <StackPane.margin>
-                        <Insets left="50.0" right="50.0" />
+                        <Insets left="150.0" right="150.0" />
                      </StackPane.margin>
                   </VBox>
                </children>
@@ -40,7 +44,15 @@
                <bottom>
                   <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                      <children>
-                        <JFXButton style="-fx-background-color: #000000; -fx-text-fill: #ffffff;" text="Enter" />
+                        <JFXButton fx:id="loginButton" prefHeight="28.0" prefWidth="132.0" style="-fx-background-color: #000000; -fx-text-fill: #ffffff;" text="Enter">
+                           <font>
+                              <Font size="14.0" />
+                           </font></JFXButton>
+                        <Label fx:id="forgotPasswordButton" text="Forgot password?">
+                           <font>
+                              <Font size="9.0" />
+                           </font>
+                        </Label>
                      </children>
                      <BorderPane.margin>
                         <Insets left="50.0" right="50.0" />
