--- a/src/sample/View/login.fxml
+++ b/src/sample/View/login.fxml
@@ -18,12 +18,12 @@
                <children>
                   <VBox alignment="CENTER" prefHeight="142.0" prefWidth="500.0" spacing="40.0">
                      <children>
-                        <JFXTextField fx:id="usernameInput" alignment="CENTER" promptText="Username">
+                        <JFXTextField fx:id="usernameInput" alignment="CENTER" maxWidth="700.0" promptText="Username">
                            <VBox.margin>
                               <Insets />
                            </VBox.margin></JFXTextField>
-                        <JFXPasswordField fx:id="passwordInput" alignment="CENTER" promptText="Password" />
-                        <VBox alignment="TOP_RIGHT" prefHeight="150.0" prefWidth="100.0">
+                        <JFXPasswordField fx:id="passwordInput" alignment="CENTER" maxWidth="700.0" promptText="Password" />
+                        <VBox alignment="TOP_RIGHT" fillWidth="false" prefHeight="150.0" prefWidth="100.0">
                            <children>
                               <Label fx:id="signUpButton" text="New user?" />
                            </children>
@@ -47,7 +47,8 @@
                         <JFXButton fx:id="loginButton" prefHeight="28.0" prefWidth="132.0" style="-fx-background-color: #000000; -fx-text-fill: #ffffff;" text="Enter">
                            <font>
                               <Font size="14.0" />
-                           </font></JFXButton>
+                           </font>
+                        </JFXButton>
                         <Label fx:id="forgotPasswordButton" text="Forgot password?">
                            <font>
                               <Font size="9.0" />
@@ -55,7 +56,7 @@
                         </Label>
                      </children>
                      <BorderPane.margin>
-                        <Insets left="50.0" right="50.0" />
+                        <Insets left="50.0" right="50.0" top="-50.0" />
                      </BorderPane.margin>
                   </VBox>
                </bottom>
