--- a/src/sample/View/signUp.fxml
+++ b/src/sample/View/signUp.fxml
@@ -14,10 +14,10 @@
          <center>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0" BorderPane.alignment="CENTER">
                <children>
-                  <JFXTextField alignment="CENTER" promptText="email" />
-                  <JFXTextField alignment="CENTER" promptText="username" />
-                  <JFXTextField alignment="CENTER" promptText="password" />
-                  <JFXTextField alignment="CENTER" promptText="confirm password" />
+                  <JFXTextField fx:id="emailInput" alignment="CENTER" promptText="email" />
+                  <JFXTextField fx:id="usernameInput" alignment="CENTER" promptText="username" />
+                  <JFXPasswordField fx:id="passwordInput" alignment="CENTER" promptText="password" />
+                  <JFXPasswordField fx:id="confirmPasswordInput" alignment="CENTER" promptText="confirm password" />
                   <JFXButton fx:id="signUpButton" contentDisplay="CENTER" style="-fx-background-color: #000000; -fx-text-fill: #ffffff;" text="Sign Up">
                      <padding>
                         <Insets bottom="20.0" left="50.0" right="50.0" top="20.0" />
@@ -30,7 +30,7 @@
             </VBox>
          </center>
          <bottom>
-            <JFXButton style="-fx-background-color: #6e6e6e; -fx-text-fill: #ffffff;" text="Go back" BorderPane.alignment="BASELINE_RIGHT">
+            <JFXButton fx:id="goBackButton" style="-fx-background-color: #6e6e6e; -fx-text-fill: #ffffff;" text="Go back" BorderPane.alignment="BASELINE_RIGHT">
                <BorderPane.margin>
                   <Insets right="10.0" />
                </BorderPane.margin>
