--- a/src/sample/View/login.fxml
+++ b/src/sample/View/login.fxml
@@ -20,14 +20,14 @@
                <children>
                   <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="40.0">
                      <children>
-                        <JFXTextField fx:id="usernameInput" alignment="CENTER" promptText="Username" />
-                        <JFXPasswordField fx:id="passwordInput" alignment="CENTER" promptText="Password" />
+                        <JFXTextField fx:id="usernameInput" alignment="CENTER" maxWidth="200.0" promptText="Username" />
+                        <JFXPasswordField fx:id="passwordInput" alignment="CENTER" maxWidth="200.0" promptText="Password" />
                         <VBox alignment="TOP_RIGHT" prefHeight="150.0" prefWidth="100.0">
                            <VBox.margin>
                               <Insets top="-35.0" />
                            </VBox.margin>
                            <children>
-                              <JFXButton fx:id="newUserButton" text="New User?" />
+                              <JFXButton fx:id="newUserButton" text="New User?" textAlignment="RIGHT" />
                            </children>
                         </VBox>
                      </children>
