--- a/src/sample/View/mainMenu.fxml
+++ b/src/sample/View/mainMenu.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sample.Controller.mainMenuController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.mainMenuController">
+   <children>
+      <Label layoutX="156.0" layoutY="89.0" text="Main Menu">
+         <font>
+            <Font size="56.0" />
+         </font></Label>
+      <JFXButton fx:id="logoutButton" layoutX="271.0" layoutY="187.0" mnemonicParsing="false" text="Logout" />
+   </children>
 </AnchorPane>
