--- a/src/sample/View/mainMenu.fxml
+++ b/src/sample/View/mainMenu.fxml
@@ -1,14 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sample.Controller.mainMenuController"
-            prefHeight="400.0" prefWidth="600.0">
 
-</AnchorPane>
+<StackPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.mainMenuController">
+   <children>
+      <BorderPane prefHeight="600.0" prefWidth="800.0">
+         <center>
+            <StackPane>
+               <children>
+                  <VBox alignment="TOP_CENTER" prefHeight="324.0" prefWidth="280.0" spacing="4.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <ImageView fitHeight="150.0" fitWidth="343.0" pickOnBounds="true" preserveRatio="true" />
+                        <JFXButton defaultButton="true" prefHeight="27.0" prefWidth="111.0" style="-fx-background-color: #000000; -fx-text-fill: #ffffff;" text="Play Game" />
+                        <JFXButton prefHeight="27.0" prefWidth="111.0" style="-fx-background-color: #000000; -fx-text-fill: #ffffff;" text="Statistics" />
+                        <JFXButton prefHeight="27.0" prefWidth="111.0" style="-fx-background-color: #000000; -fx-text-fill: #ffffff;" text="Game Info" />
+                     </children>
+                  </VBox>
+               </children>
+            </StackPane>
+         </center>
+      </BorderPane>
+   </children>
+</StackPane>
