--- a/src/sample/View/login.fxml
+++ b/src/sample/View/login.fxml
@@ -8,8 +8,9 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.loginController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.loginController">
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0" StackPane.alignment="CENTER">
          <StackPane.margin>
@@ -18,11 +19,11 @@
          <center>
             <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
-                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="40.0">
+                  <VBox alignment="CENTER" prefHeight="193.0" prefWidth="500.0" spacing="40.0">
                      <children>
                         <JFXTextField fx:id="usernameInput" alignment="CENTER" maxWidth="200.0" promptText="Username" />
                         <JFXPasswordField fx:id="passwordInput" alignment="CENTER" maxWidth="200.0" promptText="Password" />
-                        <VBox alignment="TOP_RIGHT" prefHeight="150.0" prefWidth="100.0">
+                        <VBox alignment="TOP_RIGHT" prefHeight="31.0" prefWidth="500.0">
                            <VBox.margin>
                               <Insets top="-35.0" />
                            </VBox.margin>
@@ -41,7 +42,7 @@
          <bottom>
             <BorderPane prefHeight="0.0" prefWidth="0.0" BorderPane.alignment="CENTER">
                <bottom>
-                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+                  <VBox alignment="CENTER" prefHeight="68.0" prefWidth="500.0" BorderPane.alignment="CENTER">
                      <children>
                         <JFXButton fx:id="loginEnterButton" style="-fx-background-color: #000000; -fx-text-fill: #ffffff;" text="Enter" />
                      </children>
@@ -53,9 +54,12 @@
             </BorderPane>
          </bottom>
          <top>
-            <BorderPane prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <BorderPane prefHeight="100.0" prefWidth="600.0" style="-fx-background-color: #424242;" BorderPane.alignment="CENTER">
                <center>
-                  <Label fx:id="alertField" textFill="#e10303" BorderPane.alignment="CENTER" />
+                  <Label fx:id="alertField" text="Binary Warfare" textAlignment="CENTER" textFill="WHITE" BorderPane.alignment="CENTER">
+                     <font>
+                        <Font size="40.0" />
+                     </font></Label>
                </center></BorderPane>
          </top>
       </BorderPane>
