--- a/src/sample/View/signUp.fxml
+++ b/src/sample/View/signUp.fxml
@@ -9,35 +9,41 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.signUpController">
-   <children>
-      <BorderPane prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <center>
-            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Label fx:id="alertField" textFill="#e10303" />
-                  <JFXTextField fx:id="emailInput" alignment="CENTER" promptText="email" />
-                  <JFXTextField fx:id="usernameInput" alignment="CENTER" promptText="username" />
-                  <JFXPasswordField fx:id="passwordInput" alignment="CENTER" promptText="password" />
-                  <JFXPasswordField fx:id="confirmPasswordInput" alignment="CENTER" promptText="confirm password" />
-                  <JFXButton fx:id="signUpButton" contentDisplay="CENTER" style="-fx-background-color: #000000; -fx-text-fill: #ffffff;" text="Sign Up">
-                     <padding>
-                        <Insets bottom="20.0" left="50.0" right="50.0" top="20.0" />
-                     </padding>
-                  </JFXButton>
-               </children>
-               <BorderPane.margin>
-                  <Insets bottom="100.0" left="100.0" right="100.0" top="100.0" />
-               </BorderPane.margin>
-            </VBox>
-         </center>
-         <bottom>
-            <JFXButton fx:id="goBackButton" style="-fx-background-color: #6e6e6e; -fx-text-fill: #ffffff;" text="Go back" BorderPane.alignment="BASELINE_RIGHT">
-               <BorderPane.margin>
-                  <Insets right="10.0" />
-               </BorderPane.margin>
-            </JFXButton>
-         </bottom>
-      </BorderPane>
-   </children>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.signUpController">
+    <children>
+        <BorderPane prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                    AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <center>
+                <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0"
+                      BorderPane.alignment="CENTER">
+                    <children>
+                        <Label fx:id="alertField" textFill="#e10303"/>
+                        <JFXTextField fx:id="emailInput" alignment="CENTER" promptText="email"/>
+                        <JFXTextField fx:id="usernameInput" alignment="CENTER" promptText="username"/>
+                        <JFXPasswordField fx:id="passwordInput" alignment="CENTER" promptText="password"/>
+                        <JFXPasswordField fx:id="confirmPasswordInput" alignment="CENTER"
+                                          promptText="confirm password"/>
+                        <JFXButton fx:id="signUpButton" contentDisplay="CENTER"
+                                   style="-fx-background-color: #000000; -fx-text-fill: #ffffff;" text="Sign Up">
+                            <padding>
+                                <Insets bottom="20.0" left="50.0" right="50.0" top="20.0"/>
+                            </padding>
+                        </JFXButton>
+                    </children>
+                    <BorderPane.margin>
+                        <Insets bottom="100.0" left="100.0" right="100.0" top="100.0"/>
+                    </BorderPane.margin>
+                </VBox>
+            </center>
+            <bottom>
+                <JFXButton fx:id="goBackButton" style="-fx-background-color: #6e6e6e; -fx-text-fill: #ffffff;"
+                           text="Go back" BorderPane.alignment="BASELINE_RIGHT">
+                    <BorderPane.margin>
+                        <Insets right="10.0"/>
+                    </BorderPane.margin>
+                </JFXButton>
+            </bottom>
+        </BorderPane>
+    </children>
 </AnchorPane>
