Fixed button typo and Database error

--- a/src/sample/View/mainMenu.fxml
+++ b/src/sample/View/mainMenu.fxml
@@ -33,7 +33,7 @@
                            </font>
                         </Label>
                         <JFXButton fx:id="mainMenuPlayButton" maxHeight="30.0" maxWidth="90.0" minHeight="30.0" minWidth="90.0" prefHeight="30.0" prefWidth="90.0" style="-fx-background-color: #e3e4e5#e3e4e5;" text="Play" />
-                        <JFXButton fx:id="mainMenuSettingsButtin" maxHeight="30.0" maxWidth="90.0" minHeight="30.0" minWidth="90.0" prefHeight="30.0" prefWidth="90.0" style="-fx-background-color: #e3e4e5#e3e4e5;" text="Settings" />
+                        <JFXButton fx:id="mainMenuSettingsButton" maxHeight="30.0" maxWidth="90.0" minHeight="30.0" minWidth="90.0" prefHeight="30.0" prefWidth="90.0" style="-fx-background-color: #e3e4e5#e3e4e5;" text="Settings" />
                         <JFXButton fx:id="mainMenuStatsButton" maxHeight="30.0" maxWidth="90.0" minHeight="30.0" minWidth="90.0" prefHeight="30.0" prefWidth="90.0" style="-fx-background-color: #e3e4e5#e3e4e5;" text="Stats" />
                         <JFXButton fx:id="mainMenuGameInfoButton" maxHeight="30.0" maxWidth="90.0" minHeight="30.0" minWidth="90.0" prefHeight="30.0" prefWidth="90.0" style="-fx-background-color: #e3e4e5#e3e4e5;" text="Game Info" />
                         <JFXButton fx:id="mainMenuExitButton" alignment="CENTER" maxHeight="30.0" maxWidth="90.0" minHeight="30.0" minWidth="90.0" prefHeight="30.0" prefWidth="90.0" style="-fx-background-color: #e3e4e5#e3e4e5 #e3e4e5#e3e4e5;" text="Exit" />
