Added alot of comments and restructured some code, and some logic fixes

--- a/src/menus/View/MatchSetup.fxml
+++ b/src/menus/View/MatchSetup.fxml
@@ -44,7 +44,7 @@
                         <JFXButton fx:id="joinGameButton" prefHeight="46.0" prefWidth="142.0" style="-fx-background-color: #000000;" text="Join Game" textFill="WHITE" />
                         <JFXButton fx:id="createGameButton" prefHeight="46.0" prefWidth="142.0" style="-fx-background-color: #000000;" text="Create Game" textFill="WHITE" />
                         <JFXButton fx:id="matchSetup_refreshButton" prefHeight="46.0" prefWidth="142.0" style="-fx-background-color: #000000;" text="Refresh" textFill="WHITE" />
-                        <JFXButton fx:id="backToMenuButton" prefHeight="41.0" prefWidth="95.0" text="Back">
+                        <JFXButton fx:id="backToMenuButton" prefHeight="41.0" prefWidth="95.0" style="-fx-background-color: e3e4e5;" text="Back">
                            <VBox.margin>
                               <Insets top="150.0" />
                            </VBox.margin>
